# sharad-backend

./: .gitignore  ChangeLog.md  README.md  cabal.project  package.yaml  sharad-back-haskell.cabal  sharad-backend.cabal
scripts/: install.sh  sharad
scripts/daemon/: install.sh  sharadd  sharadd-start  sharadd-stop  sharadd-usage
scripts/wrapper/: sharad-start.sh  sharad-usage.sh  sharad.sh
spec/: crud-note.feature.md  summary.md  trash.feature.md
src/: ChecklistCrud.hs  Crud.hs  CrudStorage.hs  Lib.hs  Model.hs  NoteCrud.hs  NoteService.hs
test/: Spec.hs
test/integration-tests/: IntegrationTests.hs  IntegrationTestsExec.hs  persona.md
test/unit-tests/: UnitTests.hs  UnitTestsExec.hs
