cabal-version: 2.4

name:           sharad-backend
version:        0.1.0.0
description:
homepage:
bug-reports:
author:
maintainer:
copyright:
build-type:     Simple
-- extra-source-files:

source-repository head
  type: git
  location: https://github.com/githubuser/sharad-back-haskell

library
  exposed-modules:
      Lib
      , NoteService
      , Crud
      , NoteCrud
      , ChecklistCrud
  other-modules:
      Paths_sharad_backend
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , sharad-model
    , happstack-server
    , bytestring
    , aeson
    , uuid
    , binary
    , directory
    , transformers
    , mtl
  default-language: Haskell2010

executable sharad-backend
  main-is: Main.hs
  other-modules:
      Paths_sharad_backend
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base >=4.7 && <5
    , sharad-backend
  default-language: Haskell2010

test-suite sharad-unit-tests
  type: exitcode-stdio-1.0
  main-is: UnitTestsExec.hs
  other-modules:
        Paths_sharad_backend
      , UnitTests
  hs-source-dirs:
      test/unit-tests
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , sharad-backend
    , sharad-model
    , HUnit ==1.6.0.0
    , directory
    , transformers
  default-language: Haskell2010

test-suite sharad-integration-tests
  type: exitcode-stdio-1.0
  main-is: IntegrationTestsExec.hs
  other-modules:
      Paths_sharad_backend
    , IntegrationTests
  hs-source-dirs:
    test/integration-tests
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hspec
    , HUnit
    , http-conduit
    , aeson
    , bytestring
    , utf8-string
    , sharad-model
  default-language: Haskell2010
